tests/ui/enum-discriminant/wrapping_niche.stderr
error: layout_of(UnsignedAroundZero) = Layout {
           size: Size(2 bytes),
           align: AbiAlign {
               abi: Align(2 bytes),
           },
           backend_repr: Scalar(
               Initialized {
                   value: Int(
                       I16,
                       false,
                   ),
                   valid_range: (..=1) | (65535..),
               },
           ),
           fields: Arbitrary {
               offsets: [
                   Size(0 bytes),
               ],
               in_memory_order: [
                   0,
               ],
           },
           largest_niche: Some(
               Niche {
                   offset: Size(0 bytes),
                   value: Int(
                       I16,
                       false,
                   ),
                   valid_range: (..=1) | (65535..),
               },
           ),
           uninhabited: false,
           variants: Multiple {
               tag: Initialized {
                   value: Int(
                       I16,
                       false,
                   ),
                   valid_range: (..=1) | (65535..),
               },
               tag_encoding: Direct,
               tag_field: 0,
               variants: [
                   Layout {
                       size: Size(2 bytes),
                       align: AbiAlign {
                           abi: Align(2 bytes),
                       },
                       backend_repr: Memory {
                           sized: true,
                       },
                       fields: Arbitrary {
                           offsets: [],
                           in_memory_order: [],
                       },
                       largest_niche: None,
                       uninhabited: false,
                       variants: Single {
                           index: 0,
                       },
                       max_repr_align: None,
                       unadjusted_abi_align: Align(2 bytes),
                       randomization_seed: 7121270564429706562,
                   },
                   Layout {
                       size: Size(2 bytes),
                       align: AbiAlign {
                           abi: Align(2 bytes),
                       },
                       backend_repr: Memory {
                           sized: true,
                       },
                       fields: Arbitrary {
                           offsets: [],
                           in_memory_order: [],
                       },
                       largest_niche: None,
                       uninhabited: false,
                       variants: Single {
                           index: 1,
                       },
                       max_repr_align: None,
                       unadjusted_abi_align: Align(2 bytes),
                       randomization_seed: 7121270564429706562,
                   },
                   Layout {
                       size: Size(2 bytes),
                       align: AbiAlign {
                           abi: Align(2 bytes),
                       },
                       backend_repr: Memory {
                           sized: true,
                       },
                       fields: Arbitrary {
                           offsets: [],
                           in_memory_order: [],
                       },
                       largest_niche: None,
                       uninhabited: false,
                       variants: Single {
                           index: 2,
                       },
                       max_repr_align: None,
                       unadjusted_abi_align: Align(2 bytes),
                       randomization_seed: 7121270564429706562,
                   },
               ],
           },
           max_repr_align: None,
           unadjusted_abi_align: Align(2 bytes),
           randomization_seed: 10038338184009274632,
       }
  --> $DIR/wrapping_niche.rs:8:1
   |
LL | enum UnsignedAroundZero {
   | ^^^^^^^^^^^^^^^^^^^^^^^

error: layout_of(SignedAroundZero) = Layout {
           size: Size(2 bytes),
           align: AbiAlign {
               abi: Align(2 bytes),
           },
           backend_repr: Scalar(
               Initialized {
                   value: Int(
                       I16,
                       true,
                   ),
                   valid_range: (..=1) | (65535..),
               },
           ),
           fields: Arbitrary {
               offsets: [
                   Size(0 bytes),
               ],
               in_memory_order: [
                   0,
               ],
           },
           largest_niche: Some(
               Niche {
                   offset: Size(0 bytes),
                   value: Int(
                       I16,
                       true,
                   ),
                   valid_range: (..=1) | (65535..),
               },
           ),
           uninhabited: false,
           variants: Multiple {
               tag: Initialized {
                   value: Int(
                       I16,
                       true,
                   ),
                   valid_range: (..=1) | (65535..),
               },
               tag_encoding: Direct,
               tag_field: 0,
               variants: [
                   Layout {
                       size: Size(2 bytes),
                       align: AbiAlign {
                           abi: Align(2 bytes),
                       },
                       backend_repr: Memory {
                           sized: true,
                       },
                       fields: Arbitrary {
                           offsets: [],
                           in_memory_order: [],
                       },
                       largest_niche: None,
                       uninhabited: false,
                       variants: Single {
                           index: 0,
                       },
                       max_repr_align: None,
                       unadjusted_abi_align: Align(2 bytes),
                       randomization_seed: 6066804703076516501,
                   },
                   Layout {
                       size: Size(2 bytes),
                       align: AbiAlign {
                           abi: Align(2 bytes),
                       },
                       backend_repr: Memory {
                           sized: true,
                       },
                       fields: Arbitrary {
                           offsets: [],
                           in_memory_order: [],
                       },
                       largest_niche: None,
                       uninhabited: false,
                       variants: Single {
                           index: 1,
                       },
                       max_repr_align: None,
                       unadjusted_abi_align: Align(2 bytes),
                       randomization_seed: 6066804703076516501,
                   },
                   Layout {
                       size: Size(2 bytes),
                       align: AbiAlign {
                           abi: Align(2 bytes),
                       },
                       backend_repr: Memory {
                           sized: true,
                       },
                       fields: Arbitrary {
                           offsets: [],
                           in_memory_order: [],
                       },
                       largest_niche: None,
                       uninhabited: false,
                       variants: Single {
                           index: 2,
                       },
                       max_repr_align: None,
                       unadjusted_abi_align: Align(2 bytes),
                       randomization_seed: 6066804703076516501,
                   },
               ],
           },
           max_repr_align: None,
           unadjusted_abi_align: Align(2 bytes),
           randomization_seed: 5820474738596514388,
       }
  --> $DIR/wrapping_niche.rs:17:1
   |
LL | enum SignedAroundZero {
   | ^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 2 previous errors

